--- a/assets/css/extended/scrollable_gallery.css
+++ b/assets/css/extended/scrollable_gallery.css
@@ -4,7 +4,8 @@ div.gallery {
     flex-direction: row;
     overflow: auto;
     padding: 10px;
-    max-width: 30vw;
+    max-width: 35em;
+    scroll-behavior: smooth;
 }
 
 div.gallery img {
@@ -12,3 +13,21 @@ div.gallery img {
     max-width: max-content;
     height: 20rem;
 }
+
+@media (width <= 1250px) {
+    div.gallery {
+        display: flex;
+        flex: content;
+        flex-direction: row;
+        overflow: auto;
+        padding: 10px;
+        max-width: em;
+        scroll-behavior: smooth;
+    }
+    div.gallery img {
+        margin: 5px;
+        max-width: max-content;
+        height: 15rem;
+    }
+}
+
